# ping-launcher

./: .gitignore  README.md
app-ping-launcher/: .gitignore  settings.gradle.kts
app-ping-launcher/app/: build.gradle.kts
app-ping-launcher/app/src/androidTest/java/kr/co/donghyun/pinglauncher/: ExampleInstrumentedTest.kt
app-ping-launcher/app/src/main/: AndroidManifest.xml
app-ping-launcher/app/src/main/cpp/: CMakeLists.txt  pingjvm.cpp
app-ping-launcher/app/src/main/cpp/pojav_jni/: awt_bridge.c  egl_bridge.c  glfw_stubs.c  input_bridge_v3.c
app-ping-launcher/app/src/main/cpp/pojav_jni/awt_xawt/: xawt_fake.c
app-ping-launcher/app/src/main/cpp/pojav_jni/ctxbridges/: gl_bridge.c  osm_bridge.c  osm_bridge.h
app-ping-launcher/app/src/main/cpp/pojav_jni/driver_helper/: hook.c  nsbypass.c
app-ping-launcher/app/src/main/cpp/pojav_jni/environ/: environ.h
app-ping-launcher/app/src/main/cpp/pojav_jni/jvm_hooks/: lwjgl_dlopen_hook.c
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/curseforge/: CurseForgeModel.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/instance/: InstanceManager.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/jvm/: JVMSettings.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/key/: KeyLayout.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/mojang/: VersionModel.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/renderer/: RendererManager.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/data/setting/: SettingManager.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/forge/: ProcessorLauncher.java
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/: ContentPackBrowserActivity.kt  ContentPackDetailActivity.kt  CrashReportActivity.kt  JvmSettingsActivity.kt  KeyboardLayoutEditorActivity.kt  MainActivity.kt  MinecraftActivity.kt  ModPackBrowserActivity.kt  ModPackDetailActivity.kt  RendererSettingActivity.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/base/: BaseActivity.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/ui/components/: GameControllerView.kt  GameUserInterface.kt  MinecraftSurface.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/ui/screen/: ContentPackBrowserScreen.kt  ContentPackDetailScreen.kt  CrashReportScreen.kt  JVMSettingsScreen.kt  KeyBoardEditorScreen.kt  MainScreen.kt  ModPackBrowserScreen.kt  ModPackDetailScreen.kt  RendererSettingsScreen.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/ui/theme/: Color.kt  Theme.kt  Type.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/util/: MinecraftActivityBridge.kt  PrepareNatives.kt  VersionUtil.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/util/curseforge/: CurseForgeAPI.kt  ForgeInstaller.kt  ForgeMinecraftDownloader.kt  ModPackInstaller.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/util/dns/: DnsHookNative.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/util/forge/: ForgeInstaller.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/util/jni/: JavaNativeLauncher.kt
app-ping-launcher/app/src/main/java/kr/co/donghyun/pinglauncher/presentation/util/minecraft/: MinecraftDownloader.kt  MinecraftJREPreparer.kt  VersionRepository.kt
app-ping-launcher/app/src/main/java/net/kdt/pojavlaunch/: MainActivity.java
app-ping-launcher/app/src/main/java/org/lwjgl/glfw/: CallbackBridge.java
app-ping-launcher/app/src/main/res/layout/: activity_minecraft.xml
app-ping-launcher/app/src/main/res/values/: strings.xml  themes.xml
app-ping-launcher/app/src/test/java/kr/co/donghyun/pinglauncher/: ExampleUnitTest.kt
app-ping-launcher/gradle/: libs.versions.toml
app-ping-launcher/gradle/wrapper/: gradle-wrapper.properties
